RK sample template/template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "Vent1": {
           "type": "string",
           "metadata": {
                "description": "Vnet1 name"
            }
        },
        "Vnet2": {
           "type": "string",
           "metadata": {
                "description": "Vnet2 name"
            }
        },
        "adminUsername": {
           "type": "string",
           "metadata": {
                "description": "VM1 Windows User Name"
            }
        },
        "adminPassword": {
           "type": "string",
           "metadata": {
                "description": "VM1 User Password"
            }
        },
        "VM2adminUsername": {
           "type": "string",
           "metadata": {
                "description": "VM2 Windows User Name"
            }
        },
        "VM3adminUsername": {
           "type": "string",
           "metadata": {
                "description": "VM3 Windows user name"
            }
        }
    },
    "variables": {
        "Vnet1": {
            "addressSpacePrefix": "10.0.0.0/24",
            "SubnetName": "Subnet1",
            "SubnetPrefix": "10.0.0.0/24"
        },
        "Vnet2": {
          "addressSpacePrefix": "192.168.0.0/24"  ,
          "SubnetName": "Subnet2",
          "SubnetPrefix": "192.168.0.0/24"
        },
        "Vnet1tovnet2peering": "[concat(parameters('Vent1'), '-',parameters('Vnet2'))]",
        "Vnet2tovmet1Peering": "[concat(parameters('Vnet2'), '-',parameters('Vent1'))]",
        "Storage": "[toLower('MyStorage09870')]",
        "PIP": "windowsVM1-PublicIP",
        "NSG": "windowsVM1-nsg",
        "NIC": "windowsVM1-NetworkInterface",
        "VMNAME": "windowsVM1",
        "NSG2": "windowsVM2-nsg",
        "NIC2": "windowsVM2-NetworkInterface",
        "NIC3": "windowsVM3-NetworkInterface",
        "VM2Name": "windowsVM2",
        "AVset": "Availableset",
        "VM3name": "windowsVM3"
    },
    "resources": [
        {
            "name": "[parameters('Vent1')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "virtualNetwork1"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('Vnet1').addressSpacePrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('Vnet1').SubnetName]",
                        "properties": {
                            "addressPrefix": "[variables('Vnet1').SubnetPrefix]"
                        }
                    }
                    
                ]
            },
            "resources": [
         {
         "apiVersion": "2020-05-01",
         "type": "virtualNetworkPeerings",
         "name": "[variables('Vnet1tovnet2peering')]",
         "location": "[resourceGroup().location]",
         "dependson": [
             "[resourceId('Microsoft.Network/virtualNetworks',parameters('Vent1'))]",
             "[resourceId('Microsoft.Network/virtualNetworks',parameters('Vnet2'))]"
         ],
         "properties": {
         "allowVirtualNetworkAccess": true,
         "allowForwardedTraffic": false,
         "allowGatewayTransit": false,
         "useRemoteGateways": false,
             "remoteVirtualNetwork": {
             "id": "[resourceId('Microsoft.Network/virtualNetworks',parameters('Vnet2'))]"
            }
            }
            }
        ]
        },
        {
            "name": "[parameters('Vnet2')]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "[parameters('Vnet2')]"
            },
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('Vnet2').addressSpacePrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('Vnet2').SubnetName]",
                        "properties": {
                            "addressPrefix": "[variables('Vnet2').SubnetPrefix]"
                        }
                    }
                   
                ]
            },
            "resources": [
         {
         "apiVersion": "2020-05-01",
         "type": "virtualNetworkPeerings",
         "name": "[variables('Vnet2tovmet1Peering')]",
         "location": "[resourceGroup().location]",
         "dependson": [
             "[resourceId('Microsoft.Network/virtualNetworks',parameters('Vnet2'))]",
             "[resourceId('Microsoft.Network/virtualNetworks',parameters('Vent1'))]"
         ],
         "properties": {
         "allowVirtualNetworkAccess": true,
         "allowForwardedTraffic": false,
         "allowGatewayTransit": false,
         "useRemoteGateways": false,
             "remoteVirtualNetwork": {
             "id": "[resourceId('Microsoft.Network/virtualNetworks',parameters('Vent1'))]"
             }
         }
         }
        ]
        },     
        
        {
            "name": "[variables('Storage')]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "2019-06-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "windowsVM1 Storage Account"
            },
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage"
        },
        {
            "name": "[variables('PIP')]",
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "tags": {
                "displayName": "PublicIPAddress"
            },
            "properties": {
                "publicIPAllocationMethod": "Static",
                "dnsSettings": {
                    "domainNameLabel": "[toLower('dnslabel09870')]"
                }
            }
        },
        {
            "name": "[variables('NSG')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "nsgRule1",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('NIC')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', variables('PIP'))]",
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('Vent1'))]"
            ],
            "tags": {
                "displayName": "windowsVM1 Network Interface"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('PIP'))]"
                            },
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('Vent1'), variables('Vnet1').SubnetName)]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('VMNAME')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('Storage'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('NIC'))]"
            ],
            "tags": {
                "displayName": "windowsVM1"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "osProfile": {
                    "computerName": "[variables('VMNAME')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "winVM1OSDisk2016",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('NIC'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('Storage'))).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "name": "[variables('AVset')]",
            "type": "Microsoft.Compute/availabilitySets",
            "apiVersion": "2019-03-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "platformUpdateDomainCount": 2,
                "platformFaultDomainCount": 3,
                "virtualMachines": [
                {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines',variables('VM2Name'))]"
                },
                {
                    "id":"[resourceId('Microsoft.Compute/virtualMachines',variables('VM3name'))]"
                }
                ]

            },
            "sku": {
                "name": "Aligned" 
            }

        },
        {
            "name": "[variables('NSG2')]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-08-01",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "nsgRule1",
                        "properties": {
                            "description": "description",
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('NIC2')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
               
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('Vnet2'))]"
            ],
            "tags": {
                "displayName": "windowsVM1 Network Interface"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('Vnet2'), variables('Vnet2').SubnetName)]"
                            }
                        }
                    }
                ]
            }
        },
        
        {
            "name": "[variables('VM2Name')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('Storage'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('NIC2'))]"
                
            ],
            "tags": {
                "displayName": "windowsVM1"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "osProfile": {
                    "computerName": "[variables('VM2Name')]",
                    "adminUsername": "[parameters('VM2adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "winVM2OSDisk",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('NIC2'))]"
                        }
                    ]
                },
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets',variables('AVset'))]"
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('Storage'))).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "name": "[variables('NIC3')]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2019-11-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
               
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('Vnet2'))]"
            ],
            "tags": {
                "displayName": "windowsVM1 Network Interface"
            },
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipConfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('Vnet2'), variables('Vnet2').SubnetName)]"
                            }
                        }
                    }
                ]
            }
        },
        {
            "name": "[variables('VM3name')]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2019-07-01",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[resourceId('Microsoft.Storage/storageAccounts', variables('Storage'))]",
                "[resourceId('Microsoft.Network/networkInterfaces', variables('NIC3'))]"
                
            ],
            "tags": {
                "displayName": "windowsVM3"
            },
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "osProfile": {
                    "computerName": "[variables('VM3Name')]",
                    "adminUsername": "[parameters('VM3adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "name": "winVM3OSDisk",
                        "caching": "ReadWrite",
                        "createOption": "FromImage"
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('NIC3'))]"
                        }
                    ]
                },
                "availabilitySet": {
                    "id": "[resourceId('Microsoft.Compute/availabilitySets',variables('AVset'))]"
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', variables('Storage'))).primaryEndpoints.blob]"
                    }
                }
            }
        }
        
    ],
    "outputs": {}
}
